# sampletest_demo

./: .gitignore  NEW_UI_DESIGN.md  README.md  langgraph.json  pyproject.toml
.cursor/rules/: global.mdc
agent-inbox-main/: package.json  tailwind.config.ts  tsconfig.json
agent-inbox-main/pages/api/: download-file.ts  get_runs_history.ts  list-folders.ts  upload-folder.ts
agent-inbox-main/src/app/: globals.css  layout.tsx
agent-inbox-main/src/components/agent-inbox/: inbox-view.tsx  index.tsx  thread-view.tsx
agent-inbox-main/src/components/agent-inbox/components/: GraphExecutionPanel.tsx  breadcrumb.tsx  generic-inbox-item.tsx  inbox-buttons.tsx  interrupted-inbox-item.tsx  run-graph-dialog.tsx  state-view.tsx  thread-actions-view.tsx
agent-inbox-main/src/components/agent-inbox/contexts/: ThreadContext.tsx
agent-inbox-main/src/components/app-sidebar/: index.tsx
agent-inbox-main/src/components/ui/: sidebar.tsx
docs/: 仮想環境と起動手順まとめ.md
frontend/: FRONTEND_ARCHITECTURE.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: DataUpload.jsx  HITLMessage.jsx  HITLMessageEnhanced.jsx  HistoryList.jsx  ProcedureExecution.jsx  ResultsView.jsx
frontend/src/contexts/: ThreadContext.jsx
frontend/src/hooks/: useInterruptedActions.js  useNotifications.js
frontend/src/types/: index.js
src/: __init__.py  config.py  excel_format_node.py  graph.py  react_node.py  state.py  understand_format.py  update_format_node.py  webapp.py
