[tool.poetry]
name = "agent-inbox-example"
version = "0.0.1"
description = "Example repository for getting started with the Agent Inbox"
authors = ["Brace Sproul"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "agent", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.25"
langchain-openai = "^0.3.17"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pandas = "^2.2.0"
langgraph = "0.4.3"
langgraph-prebuilt = "0.1.8"
langgraph-cli = {extras = ["inmem"], version = "^0.2.10"}
pydantic = "^2.7.0"
pymupdf = "^1.25.5"
langchain-community = "^0.3.24"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"